# Magic_Recode

./: .gitignore  .gitmodules  Build.bat  Build.sh  CMakeLists.txt  Magic Recode.sln  Magic_Recode.sln  README.md  To_Do
Magic Recode/: Byte_Manager_Find_Bytes.hpp  Byte_Manager_Functions.hpp  Chat_Print_Formatted_Functions.hpp  Client_Send_Move.hpp  Client_Send_Move_Variables.hpp  Controller_Move.hpp  Controller_Move_Functions.hpp  Controller_Move_Variables.hpp  Copy_User_Command_Functions.hpp  Copy_User_Command_Structures.hpp  I_Am_Graphical_User_Interface.hpp  Includes.hpp  Initialize_I_Am_Graphical_User_Interface.hpp  Initialize_Window_Procedure.hpp  Magic Recode.vcxproj  Magic Recode.vcxproj.filters  Menu_Select.hpp  Menu_Select_Functions.hpp  Physics_Simulate.hpp  Present.hpp  Redirect_Chat_Print_Formatted.hpp  Redirect_Client_Send_Move.hpp  Redirect_Controller_Move.hpp  Redirect_Copy_User_Command.hpp  Redirect_Function.hpp  Redirect_Menu_Select.hpp  Redirect_Physics_Simulate.hpp  Redirect_Present.h  Redirected_Chat_Print_Formatted.hpp  Redirected_Client_Send_Move.hpp  Redirected_Controller_Move.hpp  Redirected_Copy_User_Command.hpp  Redirected_Menu_Select.hpp  Redirected_Present.hpp  Redirected_Window_Procedure.hpp  Redirection_Manager.hpp  Window_Procedure_Structures.hpp  Window_Procedure_Variables.hpp
Magic_Recode/: Byte_Manager_Copy_Bytes.hpp  Byte_Manager_Find_Bytes.hpp  Byte_Manager_Functions.hpp  Chat_Print_Formatted.hpp  Chat_Print_Formatted_Functions.hpp  Chat_Print_Formatted_Handle_Formatted_Message.hpp  Chat_Print_Formatted_Handle_Message.hpp  Chat_Print_Formatted_Initialize_Chat_Print_Formatted.hpp  Chat_Print_Formatted_Redirect_Chat_Print_Formatted.hpp  Chat_Print_Formatted_Redirected_Chat_Print_Formatted.hpp  Chat_Print_Formatted_Redirected_Chat_Print_Formatted_Global_Offensive.hpp  Chat_Print_Formatted_Redirected_Chat_Print_Formatted_Source.hpp  Chat_Print_Formatted_Variables.hpp  Client_Send_Move.hpp  Client_Send_Move_Functions.hpp  Compressed_User_Command.hpp  Controller_Move_Functions.hpp  Controller_Move_Redirect_Controller_Move.hpp  Controller_Move_Redirected_Controller_Move.hpp  Copy_User_Command.hpp  Copy_User_Command_Global_Offensive_User_Command_Structure.hpp  Copy_User_Command_Redirect_Copy_User_Command.hpp  Copy_User_Command_Redirected_Copy_User_Command.hpp  Copy_User_Command_Structures.hpp  Copy_User_Command_User_Command_Structure.hpp  Copy_User_Command_Variables.hpp  Entry_Point.cpp  I_Am_Graphical_User_Interface_Functions.hpp  I_Am_Graphical_User_Interface_Initialize_I_Am_Graphical_User_Interface.hpp  Includes.hpp  Initialize_Controller_Move.hpp  Initialize_Copy_User_Command.hpp  Initialize_I_Am_Graphical_User_Interface.hpp  Initialize_Menu_Select.hpp  Initialize_Present.hpp  Initialize_Redirect_Chat_Print_Formatted.hpp  Initialize_Window_Procedure.hpp  Magic_Recode.vcxproj  Magic_Recode.vcxproj.filters  Menu_Select.hpp  (+32 more)
Magic_Recode/C++/: Entry_Point.cpp
Magic_Recode/Header++/: Includes.hpp
Magic_Recode/Header++/Byte_Manager/Functions/: Byte_Manager_Copy_Bytes.hpp  Byte_Manager_Find_Bytes.hpp  Byte_Manager_Set_Byte.hpp
Magic_Recode/Header++/Chat_Print_Formatted/: Chat_Print_Formatted.hpp
Magic_Recode/Header++/Chat_Print_Formatted/Functions/: Chat_Print_Formatted_Functions.hpp  Chat_Print_Formatted_Handle_Formatted_Message.hpp  Chat_Print_Formatted_Initialize_Chat_Print_Formatted.hpp  (+4 more)
Magic_Recode/Header++/Controller_Move/: Controller_Move.hpp
Magic_Recode/Header++/I_Am_Graphical_User_Interface_Initialize_I_Am_Graphical_User_Interface/: I_Am_Graphical_User_Interface.hpp
Magic_Recode/Header++/Immediate_Mode_Graphical_User_Interface/: Immediate_Mode_Graphical_User_Interface.hpp
Magic_Recode/Header++/Physics_Simulate/: Physics_Simulate.hpp
Magic_Recode/Header++/Present/: Present.hpp
Magic_Recode/Header++/Window_Procedure/: Window_Procedure.hpp
(+41 files in other folders)
